--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.4",
     "@iconify/react": "^4.0.0",
     "@mui/material": "^5.10.9",
+    "@mui/x-data-grid": "^5.17.7",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +17,7 @@
     "moment": "^2.29.4",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
+    "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-redux": "^8.0.4",
