--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^7.5.3",
     "moment": "^2.29.4",
     "notistack": "^2.0.5",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
