--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:5001",
+  "proxy": "http://localhost:5001",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -22,6 +22,7 @@
     "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-google-recaptcha": "^2.1.0",
     "react-lottie": "^1.2.3",
     "react-redux": "^8.0.4",
     "react-reveal": "^1.2.2",
