--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-lottie": "^1.2.3",
     "react-qr-code": "^2.0.8",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^8.0.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.2",
